--- a/src/components/GithubCode.scss
+++ b/src/components/GithubCode.scss
@@ -1,4 +1,5 @@
 .GithubCode {
   height: 300vw;
   position: relative;
+  background-color: white;
 }
